# chatty-estate

./: README.md
chat/: pyproject.toml
chat/chat/: app.py
chat/chroma_db/: chroma.sqlite3
