[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["cneill <cneill@indeed.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
dotenv = "^0.9.9"
openai = "^1.68.0"
lancedb = "^0.21.1"
pydantic = "^2.10.6"
langchain = "^0.3.21"
langchain-community = "^0.3.20"
chromadb = "^0.6.3"
tiktoken = "^0.9.0"
langchain-openai = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
